--- a/themes/zdoc/layouts/404.html
+++ b/themes/zdoc/layouts/404.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<main class="main">
-  Page not found
+<main class="mid text-center">
+  <h1 style="margin: 2rem auto;">Page not found</h1>
 </main>
 {{ end }}
