--- a/themes/zdoc/assets/sass/pages/_single.scss
+++ b/themes/zdoc/assets/sass/pages/_single.scss
@@ -174,6 +174,10 @@
       }
     }
 
+    & > div{
+      margin-bottom: 1rem;
+    }
+
     div.chroma {
       position: relative;
 
@@ -661,6 +665,19 @@ table:not(.lntable) {
   td {
     code {
       padding: 2px 7px !important;
+    }
+  }
+}
+
+
+.additional-resources {
+  .single__contents {
+    & ul > li {
+      margin-bottom: 1rem;
+
+      a {
+        color: $red;
+      }
     }
   }
 }
